--- a/assets/sass/components/_navigation.scss
+++ b/assets/sass/components/_navigation.scss
@@ -35,6 +35,7 @@
 	    z-index: -1;
 		pointer-events: auto;
     	padding: 0;
+    	transition: all 250ms ease-out;
 
 	    .link-list {
 	    	opacity: 0;
@@ -45,7 +46,8 @@
 		    width: 100vw;
 
 		    &__link-item {
-	    		margin-bottom: 40px;
+		    	margin-bottom: 20px;
+			    padding: 10px 0;
 	    		text-align: center;
 	    		// used to hide menu items when search opens
 	    		transform: scale(1);
@@ -76,6 +78,7 @@
 		 	// background-color: transparent;
 
 	 		.bar {
+				stroke: $hbc-gray;
 
 			 	&__top {
 					// d: path("M0,5 L30,5");
@@ -111,6 +114,21 @@
 	    	}
 		}
     }
+
+
+
+	// hide search icon when nav is open
+    @include media('<=medium') {
+
+		&--open {
+
+			.header-search__svg {
+		 		opacity: 0;
+		 		pointer-events: none;
+			}
+		}
+	}
+
 
     @include media('>=medium') {
 
