--- a/assets/sass/base/_post-helper-styles.scss
+++ b/assets/sass/base/_post-helper-styles.scss
@@ -13,6 +13,9 @@
 
 	p ~ ul {
 		margin-bottom: 40px;
+		@include media('<medium') {
+			padding-left: 20px;
+		}
 
 		li {
 			margin-bottom: 10px;
@@ -25,6 +28,7 @@
 		font-size: 18px;
 		font-family: $hbc-font-family-02;
 		font-weight: 300;
+		overflow-wrap: break-word;
 	}
 
 	p a, 
@@ -63,6 +67,19 @@
 		padding-bottom: $content-side-margins;
 		border-left: dotted 2px $hbc-border;
 
+		@include media('<medium') {
+			margin: 0;
+			border-left: 0;
+
+			&:first-of-type {
+				border-top: dotted 2px $hbc-border;
+			}
+
+			&:last-of-type {
+				border-bottom: dotted 2px $hbc-border;
+			}
+		}
+
 		&:first-of-type {
 			padding-top: $content-side-margins;
 			margin-top: $content-side-margins-large;
@@ -82,6 +99,15 @@
 			@include render-type-style(base, $type-styles);
 			font-size: 22px;
 			font-style: italic;
+		}
+
+		ul {
+			padding-left: 20px;
+			margin-top: 0;
+
+			li {
+				margin-bottom: 20px;
+			}
 		}
 	}
 
