--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,8 +1,7 @@
 // Typography
-@import url('https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,500');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
 
-$hbc-font-family-01: 'Crimson Text', sans-serif;
+$hbc-font-family-01: 'Open Sans', sans-serif;
 $hbc-font-family-02: 'Open Sans', sans-serif;
 
 $type-styles: (
