--- a/assets/sass/components/_article-snippet.scss
+++ b/assets/sass/components/_article-snippet.scss
@@ -2,6 +2,7 @@
 	position: relative;
 	display: flex;
     flex-direction: column;
+    max-width: 100%;
 
 	@media screen and (min-width: $breakpoint-medium) {
 
