--- a/_includes/js.html
+++ b/_includes/js.html
@@ -3,7 +3,7 @@
 <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/vendor/jekyll-search-js/search.js"></script>
 <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/main.js"></script>
 
-{% if site.owner.google.analytics %}
+{% if site.google_analytics %}
 <!-- Asynchronous Google Analytics snippet -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -11,7 +11,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', '{{ site.google.analytics }}', 'auto');
+  ga('create', '{{ site.google_analytics }}', 'auto');
   ga('send', 'pageview');
 </script>
 {% endif %}
