--- a/assets/sass/pages/_about-page.scss
+++ b/assets/sass/pages/_about-page.scss
@@ -252,6 +252,7 @@
 		    	max-height: calc(90vw / 2 - 20px);
 				margin: 0;
 				margin-right: 10px;
+				margin-bottom: 10px;
 
 				&:last-child {
 					margin-left: 10px;
