updated js to toggle a class instead of directly setting style attributes

--- a/assets/sass/components/_header-search.scss
+++ b/assets/sass/components/_header-search.scss
@@ -155,6 +155,15 @@
 			    margin-right: 0px;
 			    color: $hbc-black;
 			}
+
+			.search-ui-fix {
+				z-index: 150;
+				width: calc(100% - 10px);
+				
+				@include media('>=medium') {
+					width: calc(100% - 30px);
+				}
+			}
 		}
     }
 
