--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -30,6 +30,7 @@
 	        transition: all 200ms ease-out;
 		    height: 70px;
 	        width: 75px;
+	        margin-right: 10px;
 		    padding: 0 10px;
 		    z-index: 20;
 
@@ -85,6 +86,7 @@
 	    &__inner {
 	    	.site-header__logo {
 		 		margin-left: 0;
+		        margin-right: 30px;
 	    	}
 		}
 	}
