adding styles for post tables

--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -22,77 +22,77 @@ $type-styles: (
         font-size: 16px,
         font-weight: 300,
         font-style: italic,
-        text-transform: normal,
+        text-transform: none,
       	font-family: $hbc-font-family-01
   	),
     label-1: (
         font-size: 18px,
         font-weight: 400,
         font-style: normal,
-        text-transform: normal,
+        text-transform: none,
       	font-family: $hbc-font-family-02
   	),
     label-2: (
         font-size: 15px,
         font-weight: 400,
         font-style: normal,
-        text-transform: normal,
+        text-transform: none,
       	font-family: $hbc-font-family-02
   	),
     headline-1: (
         font-size: 62px,
         font-weight: 700,
         font-style: normal,
-        text-transform: normal,
+        text-transform: none,
       	font-family: $hbc-font-family-01
   	),
     headline-2: (
         font-size: 40px,
         font-weight: 600,
         font-style: normal,
-        text-transform: normal,
+        text-transform: none,
       	font-family: $hbc-font-family-01
   	),
     headline-3: (
         font-size: 32px,
         font-weight: 600,
         font-style: normal,
-        text-transform: normal,
+        text-transform: none,
       	font-family: $hbc-font-family-01
   	),
     subhead-1: (
         font-size: 20px,
         font-weight: 600,
         font-style: normal,
-        text-transform: normal,
+        text-transform: none,
       	font-family: $hbc-font-family-02
   	),
     subhead-2: (
         font-size: 20px,
         font-weight: 400,
         font-style: normal,
-        text-transform: normal,
+        text-transform: none,
         font-family: $hbc-font-family-02
     ),
     subhead-3: (
         font-size: 16px,
         font-weight: 700,
         font-style: normal,
-        text-transform: normal,
+        text-transform: none,
         font-family: $hbc-font-family-02
     ),
     nav: (
         font-size: 20px,
         font-weight: 600,
         font-style: normal,
-        text-transform: normal,
+        text-transform: none,
       	font-family: $hbc-font-family-02
   	),
     big-copy: (
         font-size: 25px,
         font-weight: 400,
         font-style: normal,
-        text-transform: normal,
+        text-transform: none,
         font-family: $hbc-font-family-02
     )
 
