--- a/assets/sass/base/_post-helper-styles.scss
+++ b/assets/sass/base/_post-helper-styles.scss
@@ -153,4 +153,37 @@
 			display: block;
 		}
 	}
+
+	table {
+		width: 100%;
+		text-align: left;
+		border-bottom: solid 1px $hbc-border;
+	    padding-bottom: 10px;
+	    margin: 40px 0;
+
+		thead {
+
+			tr {
+
+				th {
+					vertical-align: top;
+					padding: 10px;
+				    background-color: $hbc-gray-5;
+					border-bottom: solid 1px $hbc-border-2;
+				    @include render-type-style(label-2, $type-styles);
+					text-transform: uppercase;
+				}
+			}
+		}
+
+		tbody {
+			tr {
+				td {
+					padding: 10px;
+					vertical-align: top;
+					@include render-type-style(base, $type-styles);
+				}
+			}
+		}
+	}
 }
