--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -14,7 +14,7 @@ layout: sub-page
 	    {% for article in pages_list %}
 	      {% if article.title != null %}
 	      {% if group == null or group == article.group %}
-	      <li class="articles__list-item"><a class="articles__list-item__link" href="{{ site.url }}{{ site.baseurl }}{{ article.url }}">{{ article.title }}<span class="entry-date"><time datetime="{{ article.date | date_to_xmlschema }}">{{ article.date | date: "%B %d, %Y" }}</time></span></a></li>
+	      <li class="articles__list-item"><a class="articles__list-item__link" href="{{ site.url }}{{ site.baseurl }}{{ article.url }}">{{ article.title }}</a></li>
 	      {% endif %}
 	      {% endif %}
 	    {% endfor %}
