adding support for responsive video embeds

--- a/assets/sass/base/_layout.scss
+++ b/assets/sass/base/_layout.scss
@@ -73,3 +73,19 @@ $content-side-margins-large: 40px;
 	}
 }
 
+// responsive helper for embedded iframes with video
+.videoWrapper {
+	position: relative;
+	padding-bottom: 76%;
+	height: 0;
+	overflow: hidden;
+	max-width: 100%;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
