experimenting with icon animation

--- a/_includes/js.html
+++ b/_includes/js.html
@@ -2,6 +2,7 @@
 <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/vendor/jekyll-search-js/fetch.js"></script>
 <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/vendor/jekyll-search-js/search.js"></script>
 <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/main.js"></script>
+<script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/vendor/snap/snap.svg-min.js"></script>
 
 {% if site.google_analytics %}
 <!-- Asynchronous Google Analytics snippet -->
