--- a/assets/sass/pages/_about-page.scss
+++ b/assets/sass/pages/_about-page.scss
@@ -2,28 +2,25 @@
 	padding-bottom: 80px;
 
 	&__header {
-		display: grid;
-	    grid-template-columns: 1fr;
-	    grid-template-rows: 1fr;
-		margin: 0 ($content-side-margins*-1) 0 ($content-side-margins*-1);
-		height: 350px;
-		max-width: 100vw;
-	    max-height: 40vh;
-	    overflow: hidden;
-	    align-items: center;
-	    @include background-gradient();
-	    background-blend-mode: multiply;
-	    
-		.about-page__title {
-			grid-column: 1 / 2;
-		    grid-row: 1 / 2;
-			text-transform: uppercase;
-			color: white;
-			margin: auto;
-		    align-self: center;
-			max-width: $content-width;
-			z-index: 1;
-		}
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        margin: 0 ($content-side-margins*-1) 0 ($content-side-margins*-1);
+        height: 350px;
+        max-width: 100vw;
+        max-height: 40vh;
+        overflow: hidden;
+        @include background-gradient();
+        
+        .about-page__title {
+            grid-column: 1 / 2;
+            grid-row: 1 / 2;
+            color: white;
+            max-width: $content-width;
+            z-index: 1;
+            margin: auto;
+            align-self: center;
+        }
 
 		.about-page__hero-image {
 		    grid-column: 1 / 2;
@@ -35,7 +32,8 @@
 	        min-height: 100%;
 	        max-width: 2880px;
 		    overflow: hidden;
-		    opacity: 0.5;
+		    opacity: 0.75;
+		    mix-blend-mode: difference;
         }
 	}
 
@@ -293,6 +291,14 @@
 	@include media('>=large') {
 		&__header {
 			margin: auto;
+
+            .about-page__title {
+                margin: 40px 0;
+                justify-self: center;
+                align-self: flex-end;
+                width: $content-width;
+                @include render-type-style(headline-1, $type-styles);
+            }
 		}
 	}
 
