--- a/_includes/og-image.html
+++ b/_includes/og-image.html
@@ -2,7 +2,7 @@
 <meta property="og:type" content="article" />
 <meta property="og:url" content="{{ site.url }}{{ site.baseurl }}/{{ page.url }}" />
 <meta property="og:description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}" />
-<meta property="og:image" content="{{ site.url }}{{ site.baseurl }}/assets/images/{{ page.image.feature }}" />
+<meta property="og:image" content="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-tech-logo-tipi.jpg" />
 <meta property="og:image:secure_url" content="{{ site.url }}{{ site.baseurl }}/assets/images/{{ page.image.feature }}" />
 <meta property="og:image:type" content="image/jpeg" />
 <meta property="og:image:alt" content="{{ page.image.feature }}" />
