--- a/_layouts/sub-page.html
+++ b/_layouts/sub-page.html
@@ -7,8 +7,8 @@
 
         <title>{% if page.title %} {{ page.title | escape }} {% else %} {{ site.title | escape }} {% endif %}</title>
 
-        <!-- {% include og-seo.html %} -->
         {% seo %}
+        {% include og-image.html %}
 
         <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/main.css">
         <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
