--- a/assets/sass/pages/_insights-page.scss
+++ b/assets/sass/pages/_insights-page.scss
@@ -105,7 +105,7 @@
 					}
 				}
 
-				.meta__author-job-title {
+				.meta__author__job-title {
 					display: none;
 				}
 
@@ -137,7 +137,7 @@
 		    	padding-bottom: 0;
 		    }
 
-			.meta__author-job-title {
+			.meta__author__job-title {
 				display: none;
 			}
 		}
@@ -236,7 +236,7 @@
 
 			.snippet {
 				
-				.meta__author-job-title {
+				.meta__author__job-title {
 					display: inline-flex;
 				}
 			}
