--- a/assets/sass/components/_header-search.scss
+++ b/assets/sass/components/_header-search.scss
@@ -196,6 +196,7 @@
 			.header-search__form {
 				position: absolute;
 		        right: 5px;
+		        top: 5px;
 			    width: calc(100% - 100px);
 	    
 				.header-search__input {
