organized images folder

--- a/assets/sass/pages/_about-page.scss
+++ b/assets/sass/pages/_about-page.scss
@@ -162,11 +162,11 @@
 		    }
 
 		    &--new-york {
-		    	background: url('../images/new-york.jpg') 50% 50% / cover no-repeat;
+		    	background: url('../images/blog/about/new-york.jpg') 50% 50% / cover no-repeat;
 		    }
 
 		    &--dublin {
-		    	background: url('../images/dublin.jpg') 100% 100% / 170% no-repeat;
+		    	background: url('../images/blog/about/dublin.jpg') 100% 100% / 170% no-repeat;
 		    }
 		}
 	}
@@ -209,7 +209,7 @@
 				}
 
 			    &--dublin {
-			    	background: url('../images/dublin.jpg') 100% 100% / 200% no-repeat;
+			    	background: url('../images/blog/about/dublin.jpg') 100% 100% / 200% no-repeat;
 			    }
 			}
 		}
@@ -259,7 +259,7 @@
 				}
 
 			    &--dublin {
-			    	background: url('../images/dublin.jpg') 100% 100% / 170% no-repeat;
+			    	background: url('../images/blog/about/dublin.jpg') 100% 100% / 170% no-repeat;
 			    }
 			}
 		}
