--- a/assets/sass/pages/_code-page.scss
+++ b/assets/sass/pages/_code-page.scss
@@ -429,7 +429,7 @@
             margin-top: 3px;
             width: 14px;
             height: 14px;
-            background-image: url("https://saksdirect.github.io/hbc-tech-blog/assets/images/repo-fork.svg");
+            background-image: url("http://tech.hbc.com/assets/images/blog/code/repo-fork.svg");
     }
 
     .icon-star:before {
@@ -438,7 +438,7 @@
             margin-top: 3px;
             width: 14px;
             height: 14px;
-            background-image: url("https://saksdirect.github.io/hbc-tech-blog/assets/images/repo-star.svg");
+            background-image: url("http://tech.hbc.com/assets/images/blog/code/repo-star.svg");
             opacity: 0.5;
     }
 }
