--- a/assets/sass/pages/_careers-page.scss
+++ b/assets/sass/pages/_careers-page.scss
@@ -1,5 +1,6 @@
 .careers-page {
 	padding-bottom: 80px;
+	text-align: center;
 
 	&__header {
 		display: grid;
@@ -48,7 +49,6 @@
 		animation-delay: 0.3s;
 
 		&__text {
-			text-align: center;
 			@include render-type-style(big-copy, $type-styles);
 			font-size: 18px;
 		}
@@ -64,81 +64,37 @@
 		margin-bottom: 80px;
 		animation-delay: 0.3s;
 
-		&__position {
-			display: flex;
-		    flex-direction: column;
-			width: 100%;
-			padding: 30px;
-		    text-align: center;
-	        font-size: 16px;
-		    background-color: $hbc-gray-5;
+		.view-all-link {
+		    display: inline-block;
+		    grid-column: 1/3;
+		    width: 100%;
+			margin: 0 auto 20px auto;
+			padding: 14px 35px;
+			color: $hbc-white;
+			background-color: $hbc-highlight;
+			border: solid 1px $hbc-highlight;
+			border-radius: 5px;
+			text-decoration: none;
+			text-transform: uppercase;
+			font-size: 15px;
+			font-weight: 600;
+			transition: color 150ms ease-out, border 150ms ease-out, background-color 150ms ease-out;
 
-		    &--featured {
-				.description__link,
-				.view-listing {
-					display: none;
-				}
-		    }
-
-		    .job-title {
-		    	margin-top: 0;
-		    	margin-bottom: 20px;
-		    	text-decoration: none;
-				@include render-type-style(headline-3, $type-styles);
-				line-height: 100%;
-
-		    	&__link {
-		    		color: $hbc-black;
-		    		text-decoration: none;
-
-		    		&:hover {
-		    			color: $hbc-highlight;
-		    		}
-		    	}
-		    }
-
-		    .location {
-		    	margin-top: 10px;
-
-		    	&__label {
-		    		font-weight: 600;
-		    	}
-		    }
+			&:hover {
+				border-color: $hbc-highlight;
+				background-color: $hbc-white;
+				color: $hbc-highlight;
+			}
 		}
 
-		&__view-all {
-			text-align: center;
+		.view-all-copy {
+			font-size: 17px;
+			grid-column: 1/3;
 
-			.view-all-link {
-			    display: inline-block;
-				margin: 40px auto 0 auto;
-				padding: 14px 35px;
-				color: $hbc-white;
-				background-color: $hbc-highlight;
-				border: solid 1px $hbc-highlight;
-				border-radius: 5px;
-				text-decoration: none;
-				text-transform: uppercase;
-				font-size: 15px;
-				font-weight: 600;
-				transition: color 150ms ease-out, border 150ms ease-out, background-color 150ms ease-out;
-
-				&:hover {
-					border-color: $hbc-highlight;
-					background-color: $hbc-white;
-					color: $hbc-highlight;
-				}
-			}
-
-			.view-all-copy {
-				font-size: 17px;
-
-				.application-link {
-					color: $hbc-black;
-					@include special-text-link();
-					border-color: $hbc-gray;
-				}
-				
+			.application-link {
+				color: $hbc-black;
+				@include special-text-link();
+				border-color: $hbc-gray;
 			}
 		}
 	}
@@ -156,14 +112,12 @@
 		&__title {
 			margin: 40px auto 70px auto;
 		    width: 100%;
-		    text-align: center;
 			grid-column: 1 / 3;
 			@include render-type-style(subhead-1, $type-styles);
 			text-transform: uppercase;
 		}
 
 		.perk {
-			text-align: center;
 			justify-self: center;
 
 			&__icon {
@@ -195,7 +149,6 @@
 		&__title {
 			margin: 40px auto 20px auto;
 		    width: 100%;
-		    text-align: center;
 			@include render-type-style(subhead-1, $type-styles);
 			text-transform: uppercase;
 		}
@@ -235,7 +188,7 @@
 		}
 
 		&__intro {
-			margin: 100px auto;
+			margin: 100px auto 50px auto;
 
 			&__text {
 				font-size: 25px;
@@ -244,52 +197,22 @@
 
 		&__jobs {
 	        display: grid;
-			grid-template-columns: 1fr 1fr 1fr 1fr;
-			grid-template-rows: 220px 220px 220px;
+			grid-template-columns: auto;
+			grid-template-rows: auto;
 			grid-auto-rows: unset;
 			max-width: 940px;
-			
-			&__position {
-			    height: 100%;
-			    width: 100%;
-			    text-align: left;
 
-		    	&--featured {
-				    .job-title {
-						@include render-type-style(headline-2, $type-styles);
-					}
+			.view-all-link {
+			    grid-column: auto;
+			    width: auto;
 
-					.description__link {
-						display: inline-block;
-		    			line-height: 145%;
-						@include render-type-style(base, $type-styles);
-				    	margin-top: 0;
-			    		color: $hbc-black;
-				    	text-decoration: none;
-				    }
-
-				    .view-listing {
-				    	margin: 20px auto;
-						color: $hbc-black;
-						font-weight: 500;
-				    	@include special-text-link();
-				    }
-
+			    &:first-child {
+					margin-right: 0;
 				}
 
-			    &:first-of-type {
-					grid-column: 1 / 3;
-				    grid-row: 1 / 3;
-			    }
-
-			    .view-listing {
-			    	margin: 20px 0;
-			    	align-self: flex-start;
-			    }
-			}
-
-			&__view-all {
-				grid-column: 1 / 5;
+				&:last-of-type {
+					margin-left: 0;
+				}
 			}
 		}
 
@@ -322,13 +245,11 @@
             }
 		}
 
-		// reveal animations
-		&__intro {
-			top: 200px;
-		}
-		
+		// reveal animations		
 		&__header,
-		&__intro {
+		&__intro ,
+		&__jobs {
+			top: 200px;
 			position: relative;
 			opacity: 0;
 
