--- a/assets/sass/base/_common.scss
+++ b/assets/sass/base/_common.scss
@@ -49,3 +49,9 @@ html {
 	margin-left: 10px;
 	margin-right: 10px;
 }
+
+hr {
+	margin: 10px 0;
+	border: 0;
+    border-bottom: solid 1px $hbc-border;
+}
