--- a/_includes/js.html
+++ b/_includes/js.html
@@ -3,6 +3,7 @@
 <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/vendor/jekyll-search-js/search.js"></script>
 <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/main.js"></script>
 <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/vendor/snap/snap.svg-min.js"></script>
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
 {% if site.google_analytics %}
 <!-- Asynchronous Google Analytics snippet -->
@@ -16,3 +17,16 @@
   ga('send', 'pageview');
 </script>
 {% endif %}
+
+<!-- for netlify cms login redirect -->
+<script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", user => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
