--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -4,11 +4,11 @@ layout: sub-page
 <article class="article">
     <header class="article__header article__header--reveal">
         <h1 class="header-title" title="{{ page.title }}">{{ page.title }}</h1>
-        {% if page.image.feature %}
-        {% if page.image.feature contains 'https' or page.image.feature contains 'http' %}
-        <img class="hero-image" title="{{ page.title }}" src="{{ page.image.feature }}" />
+        {% if page.feature-image %}
+        {% if page.feature-image contains 'https' or page.feature-image contains 'http' %}
+        <img class="hero-image" title="{{ page.title }}" src="{{ page.feature-image }}" />
         {% else %}
-        <img class="hero-image" title="{{ page.title }}" src="{{ site.url }}{{ site.baseurl }}/assets/images/{{ page.image.feature }}" />
+        <img class="hero-image" title="{{ page.title }}" src="{{ site.url }}{{ site.baseurl }}/assets/images/{{ page.feature-image }}" />
         {% endif %}
         {% else %}
         <span id="no-image-placeholder" class="no-image-placeholder"></span>
